[gd_scene load_steps=8 format=2]

[ext_resource path="res://defensive_tower_alpha/DefensiveTowerAlpha.gd" type="Script" id=1]
[ext_resource path="res://defensive_tower_alpha/DefensiveTowerBaseAlpha.tscn" type="PackedScene" id=2]
[ext_resource path="res://defensive_tower_alpha/DefensiveTowerTurretAlpha.tscn" type="PackedScene" id=3]
[ext_resource path="res://defensive_tower_alpha/DefensiveTowerCannonAlpha.tscn" type="PackedScene" id=4]
[ext_resource path="res://defensive_tower_alpha/DefensiveTowerBarrelAlpha.tscn" type="PackedScene" id=5]
[ext_resource path="res://defensive_tower_alpha/DefensiveTowerBulletChamberAlpha.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "tower_alpha_animation"
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Turret:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base/Turret/Barrel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 8 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base/Turret/BulletChamber:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 12 ), Vector2( 0, 14 ), Vector2( 0, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base/Turret/BulletChamber:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[node name="DefensiveTowerAlpha" type="Node2D"]
script = ExtResource( 1 )

[node name="Base" parent="." instance=ExtResource( 2 )]

[node name="Turret" parent="Base" instance=ExtResource( 3 )]

[node name="Cannon" parent="Base/Turret" instance=ExtResource( 4 )]

[node name="Barrel" parent="Base/Turret" instance=ExtResource( 5 )]

[node name="BulletChamber" parent="Base/Turret" instance=ExtResource( 6 )]
position = Vector2( 0, 12 )

[node name="bullet_start_Position2D" type="Position2D" parent="Base/Turret"]
position = Vector2( 0, -50 )

[node name="AnimationPlayerTowerAlpha" type="AnimationPlayer" parent="."]
anims/tower_alpha_animation = SubResource( 1 )
[connection signal="animation_finished" from="AnimationPlayerTowerAlpha" to="." method="_on_AnimationPlayerTowerAlpha_animation_finished"]
